--- a/Personal/2024-05-22-资金.md
+++ b/Personal/2024-05-22-资金.md
@@ -202,3 +202,19 @@ tag: Personal
 + 未来规划
   + 现在的钱用过西藏旅行
   + 下个月再存钱
+
+## 2024.10.15
+
++ 当前余额
+  + 微信：7.16
+  + 招商：205.56
+  + 中国：1247.4
+  + 信用：-251.71
+  + 总计：1208.41
+
++ 未来规划
+  + 工资预计：15000 * 0.845 = 12675
+  + 购买手机：8000
+  + 房租：1250
+  + 存款：2000
+  + 生活费：1425
