--- a/Python/python_2_编程技巧/2024-05-22-2_2_编程技巧.md
+++ b/Python/python_2_编程技巧/2024-05-22-2_2_编程技巧.md
@@ -9,6 +9,69 @@ tag: Python
 
 + python3 常用的编程技巧
 
+## python3 拷贝文件和目录
+
+在 Python3 中，拷贝文件和目录可以使用内置的 `shutil` 模块，它提供了高效的方法来复制、移动和删除文件和目录。
+
+以下是一些常用的 `shutil` 操作：
+
+### 1. 拷贝文件
+可以使用 `shutil.copy()` 来复制文件。此函数会将源文件复制到目标文件或目录，并保持文件的权限位不变。
+
+```python
+import shutil
+
+# 复制文件到指定目录
+shutil.copy('source_file.txt', 'destination_directory/')
+
+# 复制并重命名
+shutil.copy('source_file.txt', 'destination_directory/new_name.txt')
+```
+
+### 2. 拷贝文件及其权限
+使用 `shutil.copy2()` 复制文件时，它不仅复制文件内容，还会复制文件的元数据（例如文件修改时间）。
+
+```python
+import shutil
+
+# 复制文件及其权限和元数据
+shutil.copy2('source_file.txt', 'destination_directory/')
+```
+
+### 3. 拷贝整个目录
+要复制整个目录（包括其中的所有子目录和文件），可以使用 `shutil.copytree()`。
+
+```python
+import shutil
+
+# 复制整个目录及其内容
+shutil.copytree('source_directory', 'destination_directory')
+```
+
+> 注意：目标目录不能已经存在，否则会报错。如果需要覆盖现有目录，可以通过 `shutil.rmtree()` 删除后再进行拷贝。
+
+### 4. 移动文件或目录
+可以使用 `shutil.move()` 来移动文件或目录。
+
+```python
+import shutil
+
+# 移动文件或目录
+shutil.move('source_path', 'destination_path')
+```
+
+### 5. 删除文件或目录
+如果需要删除文件或目录，可以使用 `shutil.rmtree()` 删除整个目录树。
+
+```python
+import shutil
+
+# 删除整个目录及其所有内容
+shutil.rmtree('directory_to_delete')
+```
+
+使用这些函数可以方便地进行文件和目录的复制、移动、重命名等操作。
+
 ## python3 字符串转二进制
 
 要将字符串转换为二进制数据，你可以使用 Python 的 `encode()` 方法。这个方法允许你将字符串编码为不同的字符集，并返回一个包含二进制数据的字节对象。默认情况下，它使用 UTF-8 编码。下面是一个示例：
