--- a/Qt/2024-08-21-qt_2_常见类.md
+++ b/Qt/2024-08-21-qt_2_常见类.md
@@ -2,8 +2,8 @@
 category: Qt
 date: 2024-08-21 09:00:00 +0800
 layout: post
-title: 碰钉机器人软件学习笔记
-tag: Qt-PD-Robot-note
+title: 常见类
+tag: Qt
 ---
 ## 简介
 
