--- a/Personal/2024-07-23-2024年工作笔记.md
+++ b/Personal/2024-07-23-2024年工作笔记.md
@@ -1990,3 +1990,18 @@ last_modified_date: 2024-07-30 10:00:00 +0800
   + 参数配置功能
     + yaml配置文件
   + 软著编写
+
++ 10.15
+  + 参数配置功能 [done]
+    + yaml配置文件
+  + 软著编写
+    + 填写源码 [done]
+  + 装板流程修改 [doing]
+    + 待讨论
+
++ 10.16
+  + 使用python实现SVN和Git的代码文件同步脚本
+    + 不如手动方便
+  + 贴合阶段优化
+    + 新方案的设计 [done]
+    + 新状态实现 [doing]
