--- a/Books/2024-10-17-C++程序设计语言-第1-3部分.md
+++ b/Books/2024-10-17-C++程序设计语言-第1-3部分.md
@@ -117,3 +117,123 @@ tag: book
 ### 1.2.4 语言，库和系统
 
 + C++的基本内置类型，运算符和语句都是计算机硬件能直接处理的：数字，字符和地址。C++没有内置的高级数据类型，也没有高级操作原语。
+
+## 1.3 学习C++
+
++ 语言特性的存在是为了支持各种程序设计风格和技术。因此，语言的学习应该更关注掌握其固有的，内在的风格，而不是试图了解每个语言特性的所有细节。
++ 请记住学习C++细节知识的真正目的是：在良好设计所提供的语境中，有能力组合使用语言特性和库特性来支持好的程序设计风格。
++ 学习C++最重要的是重视基本概念(例如类型安全，资源管理和不变式)和程序设计技术(例如使用限定作用域的对象进行资源管理以及在算法中使用迭代器)，还要注意不要迷失在语言技术性细节中。
++ 学习一门程序设计语言的目的是成为一个更好的程序员，即，能更高效的设计和实现新系统，维护旧系统。为此，领悟编程和设计技术比了解所有细节重要得多。
+
+### 1.3.1 用C++编程
+
++ C++程序设计的主要理念与大多数高级语言编程一样：用代码直接表达从设计而来的概念。
+
+## 1.4 C++的历史
+
+### 1.4.5 C++的用途
+
++ C++有大量的支持库和工具集，例如
+  + Boost 可移植基础库
+  + POCO 网站开发库
+  + QT 跨平台应用开发库
+  + wxWidgets 跨平台图形用户界面库
+  + WebKit 网页浏览器布局引擎库
+  + CGAL 计算几何库
+  + QuickFix 金融信息交换库
+  + OpenCV 实时图像处理库
+  + Root 高能物理库
+
+## 1.5 建议
+
++ 每一章都有建议，给出该章节内容相关的一些具体建议。这些建议都是一些经验法则，而非不变的定律。
++ 对于初学者，下面列出了一些来自C++的设计，学习和历史这几节的建议
+  + 用代码直接表达想法(概念)，例如，表达为一个函数，一个类或是一个枚举
+  + 编写代码应以优雅且高效为目标
+  + 不要过度抽象
+  + 设计应关注提供优雅且高效的抽象，可能的情况下以库的形式呈现
+  + 用代码直接表达想法之间的关联，例如，通过参数化或类层次
+  + 无关的想法应用独立的代码表达，例如，壁面类之间的相互依赖
+  + 令资源是显式的(将它们表示为类对象)
+  + 简单的想法应该简单表达
+  + 使用库，特别是标准库，不要试图从头开始构建所有东西
+  + 使用类型丰富的程序设计风格
+  + 如果数据具有不变量，封装它
++ 总之：**编写好程序需要智慧，风格和耐心。你不可能第一次就成功，要不断尝试。**
+
+# 第二章 C++概览：基础知识
+
+## 2.1 引言
+## 2.2 基础概念
+
++ C++是一种编译型语言。顾名思义，想要运行一段C++程序，需要首先用编译器把源代码转换为对象文件，然后再用链接器把这些对象组合生成可执行程序。一个C++程序通常包含许多源代码文件，通常称为源文件。
++ 一个可执行程序适用于一种特定的硬件/系统组合，是不可移植的。当我们谈论C++程序的可移植性时，通常是指源代码的可移植性。也就是说，同一份源代码可以在不同系统上成功编译并运行。
++ ISO的C++标准定义了两种实体
+  + 核心语言功能，例如内置类型和循环
+  + 标准库组件，例如容器和I/O操作
++ C++是一种静态类型语言，这意味着编译器在处理任何实体(例如对象，值，名称和表达式)时，都必须清楚它的类型。对象的类型决定了能在该对象上执行哪些操作。
+
+### 2.2.1 Hello world
+
++ 在每个C++程序中有且只有一个名为main()的全局函数，在执行一个程序时首先执行该函数。如果main()返回一个int值，则这个值将作为程序给系统的返回值。如果main()没有返回任何值，则系统也将收到一个表示程序完成的值。这个值：基于Linux/Unix的环境通常会用到，而基于windows的环境一般不会用到
++ 基本上所有可执行代码都要放在函数中，并且被main()直接或间接的调用
+
+### 2.2.2 类型，变量和算术运算
+
++ 每个名字和每个表达式都有一个类型，类型决定所能执行的操作。
++ 声明(declaration)是一条语句，负责为程序引入一个新的名字，并指定该命名实体的类型
+  + 类型(type) 定义一组可能的值以及一组(对象上的)操作
+  + 对象(object) 是存放某类型值的内存空间
+  + 值(value) 是一组二进制位，具体的含义由类型决定
+  + 变量(variable) 是一个命名的对象
+
++ C++提供了好几种表示初始化的符号
+  + 符号 = 是一种比较传统的形式，最早被C语言使用
+  + 花括号内的一组初始化器列表。最好在C++中使用更通用的{}列表形式。抛开其他因素不谈，使用初始化器列表的形式至少可以确保不会发生某些可能导致信息丢失的类型转换。
+
++ 我们可以使用 = 的初始化形式与auto配合，因为在此过程中不存在可能引发错误的类型转换。
++ 当我们没有明显的理由需要显式指定数据类型时，一般使用auto。在这里，明显的理由包括
+  + 该定义位于一个较大的作用域中，我们希望代码的读者清楚的直到其类型
+  + 我们希望明确规定某个变量的范围和精度(例如希望使用double而非float)
+
+### 2.2.3 常量
+
++ C++支持如下两种不变性概念
+  + const：大致意思是，我承诺不改变这个值。主要用于说明接口，这样在把变量传入函数时就不必担心变量会在函数内被改变了。编译器负责确认并执行const的承诺
+  + constexpr：大致意思是，在编译时求值。主要用于说明常量，作用是允许将数据内置于只读内存中以及提升性能。
+
+## 2.3 用户自定义类型
+
++ 我们把可以通过基本类型，const修饰符和声明运算符构造出来的类型称为内置类型(built-in type)
++ 我们把利用C++的抽象机制构建的新类型称为用户自定义类型(user-defined types)
+
+# 第三章 C++概览：抽象机制
+
+## 3.2 类
+
++ C++最核心的语言特性就是类。类是一种用户自定义的数据类型，用于在程序代码中表示某种概念。
++ 我们只考虑对三种重要的类的基本支持
+  + 具体类
+  + 抽象类
+  + 类层次中的类
+
+### 3.2.1 具体类型
+
++ 具体类的基本思想是他们的行为 就像内置类型一样。
+
++ 析构函数的命名规则是一个求补运算符后接类的名字，从含义上来说它是构造函数的补充。
+
+## 3.5 建议
+
++ 直接用代码表达你的想法
++ 在代码中直接定义类来表示应用中的概念
++ 用具体类表示那些简单的概念或性能关键的组件
++ 避免裸的new和delete操作
++ 用资源句柄和RAII管理资源
++ 当接口和实现需要完全分离时使用抽象类作为接口
++ 用类层次表示具有固有的层次关系的概念
++ 在设计类层次时，注意区分实现继承和接口继承
++ 控制好对象的构造，拷贝，移动和析构操作
++ 以值的方式返回容器(依赖于移动操作以提高效率)
++ 注意强资源安全，也就是说，不要泄露任何你认为是资源的东西
++ 使用函数模板表示通用的算法
