--- a/Personal/2024-07-23-2024年工作笔记.md
+++ b/Personal/2024-07-23-2024年工作笔记.md
@@ -2005,3 +2005,8 @@ last_modified_date: 2024-07-30 10:00:00 +0800
   + 贴合阶段优化
     + 新方案的设计 [done]
     + 新状态实现 [doing]
+
++ 10.17
+  + 贴合阶段优化
+    + 新状态实现 [done]
+  + 绝缘板安装软件用户手册 [doing]
