--- a/Personal/2024-07-23-2024年工作笔记.md
+++ b/Personal/2024-07-23-2024年工作笔记.md
@@ -2010,3 +2010,13 @@ last_modified_date: 2024-07-30 10:00:00 +0800
   + 贴合阶段优化
     + 新状态实现 [done]
   + 绝缘板安装软件用户手册 [doing]
+
++ 10.18
+  + 绝缘板安装软件用户手册 [done]
+
+## 2024.10.21 - 2024.10.27
+
++ 10.21
+  + 参数配置文件
+    + 加载接口
+    + 将GVL已知的参数都移到配置文件中
