--- a/Books/2024-10-17-C++程序设计语言-第1-3部分.md
+++ b/Books/2024-10-17-C++程序设计语言-第1-3部分.md
@@ -237,3 +237,64 @@ tag: book
 + 以值的方式返回容器(依赖于移动操作以提高效率)
 + 注意强资源安全，也就是说，不要泄露任何你认为是资源的东西
 + 使用函数模板表示通用的算法
+
+# 第四章 C++概览：容器与算法
+
+## 4.1 标准库
+
++ 本书介绍的标准库设施，在任何一个完整的C++实现中都是必备的部分。
+
+### 4.1.1 标准库概述
+
++ 标准库提供的设施可以分为以下几类
+  + 运行时语言支持，例如对资源分配和运行时类型信息的支持
+  + C标准库
+  + 字符串和I/O流
+  + 一个包含容器和算法的框架，人们习惯上称这个框架为标准模板库(STL)
+  + 对数值计算的支持
+  + 对正则表达式匹配的支持
+  + 对并发程序设计的支持，包括thread和lock机制
+  + 一系列工具，它们用于支持模板元编程，STL-风格的泛型程序设计和通用程序设计
+  + 用于资源管理的智能指针和垃圾收集器接口
+  + 特殊容器
++ 本质上来说，C++标准库提供了最常用的基本数据结构以及运行在之上的基础算法。
+
+## 4.6 建议
+
++ 没必要推倒重来，直接使用标准库是最好的选择
++ 除非万不得已，大多数时候先考虑使用标准库，在考虑别的库
++ 标准库绝非万能
++ 一定要了解各种标准库容器的设计思想和优缺点
++ 优先选用vector作为你的容器类型
++ 如果你拿不准会不会越界，记得使用带边界检查的容器
++ 用push_back()或者back_inserter()给容器添加元素
+
+# 第五章 C++概览：并发与实用功能
+
+## 5.2 资源管理
+
++ 所有程序都包含一项关键人物：管理资源。所谓资源是指程序中符合先获取后释放规律的东西，比如内存，锁，套接字，线程句柄和文件句柄等。
+
+### 5.2.1 unique_ptr与shared_ptr
+
++ 标准库提供了两种智能指针来管理自由存储上的对象
+  + unique_ptr对应所有权唯一的情况
+  + shared_ptr对应所有权共享的情况
++ 这些智能指针最基本的作用是防止由于编程疏忽而造成的内存泄漏。
+
+## 5.3 并发
+
++ 并发，也就是多个任务同时执行，被广泛用于提高吞吐率(用多个处理器共同完成单个运算)和提高响应速度(允许程序的一部分在等待响应时，另一部分继续执行)
++ 标准库并发设施重点提供系统级并发机制，而不是直接提供复杂的高层并发模型。基于标准库并发设施可以构建出这类高层并发模型，并以库的形式提供。
++ 标准库直接支持在单一地址空间内并发执行多个线程。为了实现这一目的，C++提供了一个适合的内存模型和一套原子操作。
+
+### 5.3.1 任务和thread
+
++ 我们称那些可以与其他计算并行执行的计算为任务(task)。线程是任务在程序中的系统级表示。
++ 若要启动一个与其他任务并发执行的任务，我们可以构造一个std::thread并将任务作为它的实参。这里的任务是以函数或函数对象的形式出现的。
++ 一个程序的所有线程共享单一地址空间。在这一点上线程与进程不同，进程间通常不直接共享数据。由于共享单一地址空间，因此线程间可通过共享对象互相通信。通常通过锁或其他防止数据竞争的机制来控制线程间通信。
+
+### 5.3.4 等待事件
+
++ 有时候thread需要等待某种外部事件，比如另一个thread完成了任务或是已经过去了一段时间。最简单的事件就是时间流逝。
++ 通过外部事件实现线程间通信的基本方式是使用condition_variable，它定义在<condition_variable>中。condition_variable提供了一种机制，允许一个thread等待另一个thread。特别的是，它允许一个thread等待某个条件(condition,通常称为一个事件，event)发生，这种条件通常是其他thread完成工作产生的结果。
