--- a/Books/2024-10-17-C++程序设计语言-第1-3部分.md
+++ b/Books/2024-10-17-C++程序设计语言-第1-3部分.md
@@ -298,3 +298,135 @@ tag: book
 
 + 有时候thread需要等待某种外部事件，比如另一个thread完成了任务或是已经过去了一段时间。最简单的事件就是时间流逝。
 + 通过外部事件实现线程间通信的基本方式是使用condition_variable，它定义在<condition_variable>中。condition_variable提供了一种机制，允许一个thread等待另一个thread。特别的是，它允许一个thread等待某个条件(condition,通常称为一个事件，event)发生，这种条件通常是其他thread完成工作产生的结果。
+
+### 5.3.5 任务通信
+
++ 标准库提供了一些特性，允许程序员在抽象的任务层(工作并发执行)进行操作，而不是在底层的线程和锁的层次直接进行操作。
+  + future和promise用来从一个独立线程上创建出的任务返回结果
+  + packaged_task是帮助启动任务以及连接返回结果的机制
+  + async()以非常类似调用函数的方式启动一个任务
+
+## 5.7 建议
+
++ 用资源句柄管理资源(RAII)
++ 用unique_ptr访问多态类型的对象
++ 用shared_ptr访问共享的对象
++ 用类型安全的机制处理并发
++ 最好避免共享数据
++ 不要为了所谓效率，而不经思考，不经测试的选择使用共享数据
++ 从并发执行任务的角度进行设计，而不是直接从thread角度思考
++ 一个库是否有用，与它的规模和复杂程度无关
++ 别轻易抱怨程序的效率低下，记得用事实说话
++ 编写代码时可以显式的令其利用某些类型的属性
++ 利用正则表达式简化模式匹配任务
++ 进行数值计算时优先选择使用库而非语言本身
++ 用numeric_limits访问数值类型的属性
+
+# 第六章 类型与声明
+
+## 6.1 ISO C++标准
+
++ 在C++标准之下，很多重要的功能都是依赖于实现的(implementation-defined)。这意味着对于语言的某个概念来说，每个实现版本都必须为之设定恰当的，定义良好的语法行为，同时详细记录行为规范。
+
+### 6.1.1 实现
+
++ C++的一个具体实现可以有两种形式：宿主式(hosted)和独立式(freestanding)。
++ 在宿主式实现中包含了C++标准和本书描述的所有标准库功能；独立式实现包含的标准库功能可能会少一些。
+
+## 6.2 类型
+
++ C++程序中的每个名字(标识符)都对应一种数据类型。该类型决定了这个名字(即该名字代表的实体)能执行哪些运算以及如何执行这些运算。
+
+### 6.2.1 
+
++ C++包含了一套基本类型(fundamental type)，这些类型对应计算机最基本的存储单元并且展现了如何利用这些单元存储数据。
+  + 布尔值类型
+  + 字符类型
+  + 整数类型
+  + 浮点数类型
+  + void类型，用以表示类型信息缺失
+  + 基于上述类型，我们可以用声明符构造出更多类型
+    + 指针类型
+    + 数组类型
+    + 引用类型
+  + 除此之外，用户还能自定义类型
+    + 数据结构和类
+    + 枚举类型，用以表示特定值的集合
+
++ 其中，布尔值，字符和整数统称为整型(integral type)，整型和浮点型进一步统称为算术类型(arithmetic type )。
++ 我们把枚举类型和类称为用户自定义类型(user-defined),因为用户必须先定义它们，然后才能使用；这一点显然与基本类型无须声明可以直接使用的方式不同。
++ 与之相反，我们把基本类型，指针和引用统称为内置类型(built-in type)。
+
+### 6.2.2 布尔值
+
++ 一个布尔变量(bool)的取值或是true或者是false，布尔变量常用于表示逻辑运算的结果。
++ 根据定义，当我们把布尔值换成整数时，true转为1，而false转为0.反之，整数值也能在需要的时候隐式的转换成布尔值，其中非0整数值对应true，而0对应false。
+
+### 6.2.9 对齐
+
++ 对象首先应该有足够的空间存放对应的变量，但这还不够。在一些及其的体系结构中，存放变量的字节必须保持一种良好的对齐方式(alignment),以便硬件在访问数据资源时足够高效(在极端情况下一次性访问所有数据)
++ 例如，4字节的int应该按字(4字节)的边界排列，而8字节的double有时也应该按字(8字节)的边界排列。
++ alignof()运算符返回实参表达式的对齐情况。
+
+## 6.3 声明
+
++ 在C++程序中要想使用某个名字(标识符)，必须先对其进行声明。换句话说，我们必须指定它的类型以便编译器指导这个名字对应的是何种实体。
++ 大多数声明(declaration)同时也是定义(definition)。我们可以把定义看成是一种特殊的声明，它提供了在程序中使用该实体所需的一切信息。尤其是当实体需要内存空间来存储某些信息时，定义语句把所需的内存预留了出来。
+
+### 6.3.1 声明的结构
+
++ 我们可以认为一条声明语句(依次)包含5个部分：
+  + 可选的前置修饰符。static，virtual
+  + 基本类型。 const int
+  + 可选的声明符。p[7]
+  + 可选的后缀函数修饰符。const noexcept
+  + 可选的初始化器或函数体。{return x;}
++ 修饰符，是指声明语句中最开始的关键字，例如virtual，extern，constexpr等。修饰符的作用是指定所声明对象的某些非类型属性。
++ 声明符由一个名字和一些可选的声明运算符组成。最常用的声明运算符包括
+  + 前缀 * 指针
+  + 前缀 *const 常量指针
+  + 前缀 & 左值引用
+  + 前缀 && 右值引用
+  + 前缀 auto 函数(使用后置返回类型)
+  + 后缀 [] 数组
+  + 后缀 () 函数
+  + 后缀 -> 从函数返回
+
+### 6.3.2 声明多个名字
+
++ C++允许在同一条声明语句中声明多个名字，其中包含逗号隔开的多个声明符即可。
++ 读者千万要注意，**在声明语句中，运算符只作用于紧邻的一个名字，对于后续的其他名字是无效的**。
+
+### 6.3.4 作用域
+
++ 声明语句为作用域引入了一个新名字，换句话说，某个名字只能在程序文本的某个特定区域使用。
+  + 局部作用域(local scope)：函数，lambda表达式中声明的名字称为局部名字。局部名字的作用域从声明处开始，到声明语句所在的快结束为之。其中块(block)是指用一对{}包围的代码片段。对于函数和lambda表达式最外层的块来说，参数名字是其中的局部名字
+  + 类作用域(class scope): 如果某个类位于任意函数，类和枚举类或其他名字空间的外部，则定义在该类中的名字称为成员名字或类成员名字。类成员名字的作用域从类声明的{开始，到类声明的结束为止
+  + 名字空间作用域(namespace scope): 
+  + 全局作用域(global scope):
+  + 语句作用域(statement scope):
+  + 函数作用域(function scope):
+
++ **在块内声明的名字能隐藏外层快及全局作用域中的同名声明**。换句话说，一个已有的名字能在块内被重新定义以指向另外一个实体。退出块后，该名字恢复原来的含义。
++ 我们可以使用作用域解析运算符::访问被隐藏了的全局名字。
+
+### 6.3.5 初始化
+
++ 顾名思义，初始化器就是对象在初始状态下被赋予的值。初始化器又四种可能的形式
+  + X a1{v};
+  + X a2 = {v};
+  + X a3 = v;
+  + X a4(v)
++ 在这些形式中，只有第一种不受任何限制，在所有场景中都能使用。
++ 建议读者使用{}。使用{}的初始化称为列表初始化(list initialization)，它能防止窄化转换。这句话的意思是
+  + 如果一种整型存不下另一种整型的值，则后者不会被转换成前者。例如，允许char到int的类型转换，但是不允许int到char的类型转换
+  + 如果一种浮点型存不下另一种浮点型的值，则后者不会被转换成前者。例如，允许float到double的类型转换，但是不允许double到float的类型转换
+  + 浮点型的值不能转换成整型值
+  + 整型值不能转换成浮点型的值
+
++ 当我们使用auto关键字从初始化器推断变量的类型时，没必要采用列表初始化的方式。而且如果初始化器是{}列表，则推断得到的数据类型肯定不是我们想要的结果。
++ 因此，当使用auto的时候应该选择=的初始化形式。
++ 空初始化器列表{}指定使用默认值进行初始化。大多数数据类型都有默认值
+  + 对于整数类型来说，默认值是数字0的某种适当形式。
+  + 指针的默认值是nullptr
+  + 用户自定义类型的默认值由该类型的构造函数决定。
