--- a/Company/shanghai-tejizhi-robot/碰钉机器人/1_1_工作笔记.md
+++ b/Company/shanghai-tejizhi-robot/碰钉机器人/1_1_工作笔记.md
@@ -11,3 +11,25 @@
 
 zhangjy     zjy12345
 Repository URL: https://SPSM-ROBOT/svn/LNGRobot 
+
+## TwinCAT3 错误码和解决方法
+
++ adserror： 1823
+  + 删除IO下的device，重新扫描
+  + 在Axis下重新映射，将虚拟轴映射到物理轴
+
++ 伺服错误码 26.0
+  + 过速度保护
+  + 思路
+    + 检查减速比 下位机走1mm，检查实际走了几毫米
+
++ 伺服错误码 4.0 
+  + 绝对时系统停机异常保护
+
++ 伺服错误码 38.1
+  + 禁止驱动器输入保护2
+  + 解决方法：不用限位就把限位屏蔽掉。去参数界面的分类4的04001和04002改为0使用
+
++ 伺服错误码 16.0
+  + 过载保护
+  + 解决方法：去参数界面的分类5的05012和05013都改为0
