--- a/Personal/2024-07-23-2024年工作笔记.md
+++ b/Personal/2024-07-23-2024年工作笔记.md
@@ -2020,3 +2020,31 @@ last_modified_date: 2024-07-30 10:00:00 +0800
   + 参数配置文件
     + 加载接口
     + 将GVL已知的参数都移到配置文件中
+
++ 10.22
+  + 上午配合李工调试问题
+    + 复现机器人上电梯掉使能
+  + 下午开会
+
++ 10.23
+  + 机械变动后，在修改后的算法模型之上测试各个轴的运行状况。
+  + 将两个机器人的两个轴都调试好，零位标定好
+
++ 10.24
+  + 解决右轮驱动器38.1问题，限位问题 [done]
+  + 将装板机器人每个轴调试好，下位机可以正常运行 [done]
+    + 过速度保护
+      + 升降 3.5
+      + 腰转 5
+      + 伸缩 13.5
+      + 工具升降 3
+    + 问题
+      + 减速比不对，以上关节在twincat上走1mm，实际走约10mm
+    + 方法
+      + 减速比缩小十倍
+  + 测试装板流程。
+    + 测试调平流程
+    + 测试对边流程
+    + 测试贴合流程
+  + 工作
+    + 线性代数，串联机器人。
